# f2021-stat39000-project6

./: .gitignore  pyproject.toml
myproject/watch_data/: __init__.py  test_watch_data.py  watch_data.py
scripts/: runme.py  runme2.py
