[tool.poetry]
name = "f2021-stat39000-project6"
version = "0.1.0"
description = "A silly package for learning in The Data Mine."
authors = ["Kevin Amstutz <kamstut@purdue.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"
plotly = "^5.3.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
